--- a/package.json
+++ b/package.json
@@ -2,18 +2,8 @@
   "name": "eau",
   "version": "1.0.0",
   "description": "A great collaborative project for la nuit de l'info 2024.",
-  "main": "index.js",
+  "main": "qrcode/get_pokemon.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dymonte/EAU.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dymonte/EAU/issues"
-  },
-  "homepage": "https://github.com/dymonte/EAU#readme"
+  }
 }
