--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.468.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
