--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
